--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=30s
+spring.quartz.wait-for-jobs-to-complete-on-shutdown=true
+spring.datasource.password=Welcome1
+spring.datasource.url=jdbc:mysql://localhost:3306/gracefulpoc?currentSchema=gracefulpoc&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.quartz.job-store-type = jdbc
+spring.quartz.properties.org.quartz.threadPool.threadCount = 100
